<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>handheld_mapping</name>
  <version>0.1.0</version>
  <description>
    Handheld 2D SLAM mapping package. Integrates YDLidar driver, rf2o laser odometry,
    and slam_gmapping to enable handheld mapping without wheel odometry.
  </description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>

  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>
  <exec_depend>slam_gmapping</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
